--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "gsap": "^3.14.2",
+    "lucide-react": "^0.556.0",
+    "motion": "^12.23.25",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1"
