--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "gsap": "^3.14.2",
     "lucide-react": "^0.556.0",
     "motion": "^12.23.25",
